<resources>
    <string name="app_name">CoachDroid</string>
    <string name="action_settings">Settings</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create More</string>
    <string name="schedule_title">Schedules</string>
    <string name="title_activity_view_schedule" translatable="false">ViewScheduleActivity</string>
    <string name="schedule_name_placeholder">Schedule Name</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="delete_confirm">Are you sure you want to delete this schedule?</string>
    <string name="delete_confirm_title">Delete</string>
    <string name="negative">No</string>
    <string name="positive">Yes</string>
    <string name="exercice_name">Exercice Name</string>
    <string name="times">Times</string>
    <string name="length">Length</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
</resources>
