<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.coachdroid.coachdroid.NewSeriesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarNewSeries"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Series" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_new_series"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.coachdroid.coachdroid.NewSeriesActivity">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/times"
            android:ems="10"
            android:layout_below="@+id/exercice_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/times"
            android:layout_toLeftOf="@+id/length"
            android:layout_toStartOf="@+id/length" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickCancel"
            android:id="@+id/btnCancel" />

        <Button
            android:text="@string/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btnCreate"
            android:layout_toRightOf="@+id/btnCancel"
            android:onClick="onClickCreate"
            android:layout_toEndOf="@+id/btnCancel" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="@string/description"
            android:id="@+id/description"
            android:layout_below="@+id/times"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/length"
            android:id="@+id/length"
            android:layout_alignBaseline="@+id/times"
            android:layout_alignBottom="@+id/times"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/exercice_name"
            android:ems="10"
            android:id="@+id/exercice_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/description"
            android:id="@+id/space"
            android:layout_margin="50dp" />

        <TextView
            android:text=":"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/space"
            android:layout_margin="10dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npSeconds"
            android:layout_alignBaseline="@+id/npMinutes"
            android:layout_alignBottom="@+id/npMinutes"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npMinutes"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btnCancel"
            android:layout_toEndOf="@+id/btnCancel"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>